tests/NormalTests/paczka1/fuzzy1/27373252.err
Error in line 2: PqhriL A848 21,4
Error in line 19: I3YCDzR A848 88,3
Error in line 31: XzsjfvB A400 0,89
Error in line 35: bHol A848 61,6
Error in line 20: XzsjfvB A400 0,3
